--- a/srv/package.json
+++ b/srv/package.json
@@ -4,7 +4,7 @@
     "prepare": "nitropack prepare",
     "dev": "nitropack dev",
     "build": "nitropack build",
-    "preview": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs"
   },
   "dependencies": {
     "nitropack": "latest"
